fix: updated query params for main funcs
